feat: Various UI improvements
